--- a/Blink/platformio.ini
+++ b/Blink/platformio.ini
@@ -8,7 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:LilyPadUSB]
+;[env:LilyPadUSB]
+;platform = atmelavr
+;board = LilyPadUSB
+;framework = arduino
+
+[env:Leonardo]
 platform = atmelavr
-board = LilyPadUSB
+board = leonardo
 framework = arduino
+
+lib_deps = Wire
